Regression: Smart UV Project is broken on 3.4 #101414

Closed
opened 2022-09-27 21:19:35 +02:00 by Michael Klein · 9 comments

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3080 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 517.40

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-26 23:14, hash: 7fa7c7ceda
Worked: 3.3.1 Release Candidate, branch: master, commit date: 2022-09-26 21:04, hash: 753dea79a3

Short description of error
UV Smart Unwarp is not working as expected. Additionally, there's a refresh issue.

Exact steps for others to reproduce the error

  • Delete Cube ;-)
  • Add Torus
  • Switch to UV Workspace
  • Enter Edit Mode
  • Select All
  • Smart UV Unwrap

You need to switch to another workspace to update the result. The result looks wrong.

3.4.0
220927_Smart_UV_Project_340.png

3.3.1
220927_Smart_UV_Project_331.png

**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3080 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 517.40 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-26 23:14, hash: `7fa7c7ceda` Worked: 3.3.1 Release Candidate, branch: master, commit date: 2022-09-26 21:04, hash: `753dea79a3` **Short description of error** UV Smart Unwarp is not working as expected. Additionally, there's a refresh issue. **Exact steps for others to reproduce the error** - Delete Cube ;-) - Add Torus - Switch to UV Workspace - Enter Edit Mode - Select All - Smart UV Unwrap You need to switch to another workspace to update the result. The result looks wrong. 3.4.0 ![220927_Smart_UV_Project_340.png](https://archive.blender.org/developer/F13583278/220927_Smart_UV_Project_340.png) 3.3.1 ![220927_Smart_UV_Project_331.png](https://archive.blender.org/developer/F13583285/220927_Smart_UV_Project_331.png)
Author

Added subscriber: @Renderbicks

Added subscriber: @Renderbicks
Michael Klein changed title from Smart UV Project broken? to Smart UV Project broken 2022-09-27 21:19:51 +02:00
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can reproduce, let me know if you want me to bisect.

Can reproduce, let me know if you want me to bisect.
Omar Emara changed title from Smart UV Project broken to Smart UV Project is broken on 3.4 2022-09-27 21:32:38 +02:00
Omar Emara changed title from Smart UV Project is broken on 3.4 to Regression: Smart UV Project is broken on 3.4 2022-09-27 21:33:05 +02:00

This issue was referenced by 5beaecb33e

This issue was referenced by 5beaecb33e74abbdb0adb9144eee5f094ed41f9c
Chris Blackbourn self-assigned this 2022-09-28 01:57:43 +02:00

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

@OmarEmaraDev, would you be able to check the other operators from a5c696a0c2 are consistent between Blender 3.3/3.4 when called from 3D viewport?
Should be just Cube, Sphere and Cylinder projection.

@OmarEmaraDev, would you be able to check the other operators from a5c696a0c2b9 are consistent between Blender 3.3/3.4 when called from 3D viewport? Should be just Cube, Sphere and Cylinder projection.
Member

@Chris_Blackbourn Yes, results seem identical.

@Chris_Blackbourn Yes, results seem identical.

Awesome, thanks!

Awesome, thanks!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101414
No description provided.