Fix T101414: in 3d viewport, smart uv project failed to pack

Regression from https://developer.blender.org/rBa5c696a0c2b9